--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
             body { margin: 0;}
             canvas {width: 100%; height: 100%;}
         </style>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.151.2/three.js" integrity="sha512-BwyZPvtawNInmLsREIDelsBWnyXzmR11MF6SG1VSkQ51YhMkdNFxL9sGKgRzTX7drQzCLVheb4sobHNGpwCn+w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.151.2/three.module.min.js" integrity="sha512-j/iEF08IQRUB6bRwn9DROA/kTWHUvujVa0FLImocQXaYWlQ0KjVN1am+86KmHirsWCWAuDfNpReEJ4vzhfJnfQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.151.2/three.module.js" integrity="sha512-SIX9YFYw+A/FNynJSYqwjxWlvsEPn2LxZLhz3lF0Fz/a3SGakn8u221GxVTxvc09rl2UgDF9QqK+6Vui12nGpA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.151.2/three.min.js" integrity="sha512-He29azWb6CQ0yzDGpF61I/SIWlAclbP/Zh95diyYHwpN0VgkH3rtJKJkcApFJG517GxurJQ2UB676HOhB6pyBQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    </head>
     <body>
         <script src="js/three.js"></script>
         <script src="js/dat.gui.min.js"></script>
